      events (e.g. to highlight the pressed keys on the virtual keyboard
      of gigedit)
    - added support for triggering notes by instrument editors (see above)
    - be verbose on DLL load errors (on Linux)
    - fixed di-harmonic triangle LFO implementation (this LFO implementation
      is only used by very few systems, most pick the int math
      implementation, which is usually faster)

  * audio driver:
    - removed the nonsense audio channel constraint (which was hard coded to
      max. 100 audio channels) for most audio drivers
    - JACK audio driver did not offer a device parameter "SAMPLERATE" as
      opposed to the LSCP specs
    - bugfix: the SAMPLERATE parameter of some drivers (e.g. JACK)
      reflected the wrong value
    - fixed a memory management bug in ASIO driver

  * MIDI driver:
    - added JACK MIDI driver
    - dispatch bank select as ordinary CC as well, the user might seriously
      want to (mis)use it for some purpose ("fixed" in all current MIDI
      input drivers: ALSA, CoreMIDI, JACK, MidiShare, MME)

  * instruments database:
    - avoid time consuming samples scanning when adding instruments
      to the instruments database
    - added support for handling lost files in the instruments database

  * Gigasampler format engine:
    - fixed a memory leak that could happen when a channel was deleted
      while notes were playing
    - made it possible to load an instrument even if the audio thread
      isn't running
    - added partial support for the "Controller Triggered" MIDI rule,
      enough for piano gigs with pedal noise samples
    - minor fix: only mark FX sends as being modified if really the
      respective FX send MIDI controller was used
    - added support for GM global device volume SysEx message

  * LSCP server:
    - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain sampler channels (so far only